welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:6: error: not found: value avnace
avnace()//premier trait achevé
^